objects/Q9__Batch_Helper__c.object
<CustomObject>
    <fields>
        <fullName>Q9__Chunk_Number__c</fullName>
        <label>Chunk Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q9__Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Population</fullName>
                </value>
                <value>
                    <fullName>Picklist Values Population</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Helper</label>
    <nameField>
        <displayFormat>BH-{0000000}</displayFormat>
        <label>Batch Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>